Its for StarkDroid

--- a/_config.yml
+++ b/_config.yml
@@ -6,20 +6,20 @@ baseurl: "/identity-jekyll-theme" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
 # Identity
-your-name: Jane Doe
-your-title: Senior Psychonautics Engineer
+your-name: M.Trishiraj
+your-title: Lead Developer of ZephyrOS
 
 # Social settings
 500px_url:
-facebook_url: https://facebook.com
-github_url:
-gitlab_url: https://gitlab.com/u/andrewbanchich
-googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
-instagram_url: https://instagram.com
-linkedin_url: https://www.linkedin.com/in/andrew-banchich-a4ba1195
+facebook_url: https://facebook.com/trishi.raj
+github_url: https://github.com/StarkDroid
+gitlab_url: 
+googleplus_url: https://plus.google.com/u/0/+starkdroidTTD
+instagram_url: https://instagram.com/solitary_reaper007
+linkedin_url: 
 pinterest_url:
 slack_url:
-twitter_url: https://twitter.com/andrewbanchich
+twitter_url: 
 
 # Build settings
 markdown: kramdown
