--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ url: "" # the base hostname & protocol for your site
 # Identity
 your-name: M.Trishiraj
 your-title: Lead Developer of ZephyrOS
+your-tagline: #Student #foodie #VELSguy 
 
 # Social settings
 500px_url:
